syntax = "proto3";
package grpc;

service PostServer{
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc GetByIdPost(GetByIdPostRequest) returns (PostResponse);
  rpc GetAllPost(GetAllPostRequest) returns (GetAllPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (PostResponse);
}

message PostResponse{
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 idAuthor = 4;
}
message CreatePostRequest{
  string title = 1;
  string content = 2;
  int64 idAuthor = 3;

}
message GetByIdPostRequest{
  int64 id = 1;
}

message GetAllPostRequest{
  int64 startId = 1;
  int64 endId = 2;
}

message GetAllPostResponse{
  repeated PostResponse posts = 1;
}

message UpdatePostRequest{
  int64 id = 1;
  string title = 2;
  string content = 3;
}

message DeletePostRequest{
  int64 id = 1;
}
